kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingres
spec:
  rules:
  - host: flask-demo.com
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 3000
